--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://andrhamm.github.io
+url: http://andrhamm.com
 title: Andrew Hammond
 subtitle: "Hacker, Homebrewer, Homesteader."
 author: Andrew Hammond
